--- a/reactpractice/package.json
+++ b/reactpractice/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "reactpractice",
+  "name": "catch-of-the-day",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,7 +20,7 @@
     "gulp-autoprefixer": "3.1.0",
     "gulp-notify": "2.2.0",
     "gulp-rename": "1.2.2",
-    "gulp-stylus": "^2.6.0",
+    "gulp-stylus": "2.1.0",
     "gulp-uglify": "1.4.2",
     "gulp-util": "3.0.7",
     "history": "1.12.5",
@@ -34,10 +35,5 @@
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.4.0"
-  },
-  "dependencies": {
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4"
-  },
-  "description": ""
+  }
 }
